# $Id: Makefile.am,v 1.1 2009/02/18 14:02:57 diemo Exp $
#
# SDIF/macosxbuild/SDIF.xcodeproj/Makefile.am	
#
# just to include Mac xcode compilation project to source
# distribution
#
# $Log: Makefile.am,v $
# Revision 1.1  2009/02/18 14:02:57  diemo
# empty makefile just to include Mac xcode compilation project in source distribution
#

# distdir		= ../../$(PACKAGE)-$(VERSION)-src

# more files to include in dist
EXTRA_DIST 	= project.pbxproj

all:
		echo "Use Apple ProjectBuilder to build for Mac OS X"
