# $Id: Makefile.am,v 1.3 2003/03/07 17:34:27 roebel Exp $
#
# ./test/files/sdif/Makefile.am		September 2000			Patrice Tisserand
#
# Source file for GNU automake, generates Makefile.in.
#
#
# This file is part of the IRCAM SDIF Library (http://www.ircam.fr/sdif)
#
# Copyright (C) 1998, 1999, 2000 by IRCAM - Centre Pompidou, Paris, France.
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# See file COPYING for further informations on licensing terms.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
#
# For any information regarding this and other IRCAM software, please
# send email to:  sdif@ircam.fr
#
# $Log: Makefile.am,v $
# Revision 1.3  2003/03/07 17:34:27  roebel
# Removed wildcard by explicit list of files. Automake does not handle
# wildcards correctly.
#
# Revision 1.2  2001/05/02 09:34:53  tisseran
# Change License from GNU Public License to GNU Lesser Public License.
#
# Revision 1.1  2000/12/20 15:57:16  roebel
# Changed Version to 3.2.2. Added missing test files to distribution
#
# Revision 1.2  2000/10/27 20:04:06  roebel
# autoconf merged back to main trunk
#
# Revision 1.1.2.2  2000/10/26  17:27:43  schwarz
# Added header with copyright and links to all Makefile.am and configure.in.
#
EXTRA_DIST = README \
 1fof.sdif  P0M.sdif   P2.sdif        Patch1.sdif      bat.sdif    t.sdif  \
 t4.sdif AO.sdif   P0M1.sdif  Patch0.sdif    Patch1Mode.sdif  orgue.sdif  \
 t2.sdif  t5.sdif  P0.sdif      P0M2.sdif  Patch0_2.sdif  perc.sdif  t3.sdif
